Add automatic package creation on upload [with setting to disable]

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ debug=true
 vpm.folder=.vpm/packages/
 vpm.repository.name=VPM Repository
 vpm.repository.author=unknown
+
+automatic.package.creation=false
