--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,6 +31,5 @@ permission:
   account:
     creation: "any"
   package:
-    creation:
-      manual: "any"
-      automatic: "any"
+    upload: "approved"
+    creation: "admin"
